--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,3 +3,10 @@
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+
+// FontAwesome
+$fa-font-path: "@fortawesome/fontawesome-free/webfonts";
+@import "@fortawesome/fontawesome-free/scss/fontawesome";
+@import "@fortawesome/fontawesome-free/scss/brands";
+@import "@fortawesome/fontawesome-free/scss/regular";
+@import "@fortawesome/fontawesome-free/scss/solid";
